validation test, update media id, changelog, documentation

--- a/.quickstart/quickstart.yml
+++ b/.quickstart/quickstart.yml
@@ -12,10 +12,8 @@ table_variables:
     - abandoned_checkout
     - abandoned_checkout_discount_code
     - abandoned_checkout_shipping_line
-  shopify_using_product_media:
-    - media
-    - media_image
-    - product_media
+  shopify_using_discount_code_app:
+    - discount_code_app
 
 destination_configurations:
   databricks:
@@ -34,5 +32,6 @@ public_models: [
   "shopify__products",
   "shopify__transactions",
   "shopify__customers",
-  "shopify__order_lines"
+  "shopify__order_lines",
+  "shopify__line_item_enhanced"
 ]
