--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -351,3 +351,5 @@ seeds:
       +column_types:
         product_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
         media_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
+  +docs:
+    show: false
