--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -67,8 +67,8 @@ dispatch:
     search_order: ['spark_utils', 'dbt_utils']
 
 models:
-  # +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
-  +schema: "shopify_{{ var('directed_schema','dev') }}" ## To be used for validation tests
+  +schema: "{{ 'shopify_integrations_tests_sqlw' if target.name == 'databricks-sql' else 'shopify' }}"
+  # +schema: "shopify_{{ var('directed_schema','dev') }}" ## To be used for validation tests
 
 seeds:
   shopify_integration_tests:
