Add media discount models, deprecate product image and price rule (#104)
* Add media discount models, deprecate product image and price rule

* Add new discount code files, new intermediate model, remove image_id from product_variant/downstream

* Buildkite error fixes

* CHANGELOG updates

* validation test, update media id, changelog, documentation

* docs

* docs + validation test fixes

* schema

* PR review + add product_variant_image source

* schema

* PR re-review

* schema

* schema

* Apply suggestions from code review

Co-authored-by: fivetran-catfritz <111930712+fivetran-catfritz@users.noreply.github.com>

---------

Co-authored-by: fivetran-catfritz <111930712+fivetran-catfritz@users.noreply.github.com>

--- a/.quickstart/quickstart.yml
+++ b/.quickstart/quickstart.yml
@@ -12,6 +12,10 @@ table_variables:
     - abandoned_checkout
     - abandoned_checkout_discount_code
     - abandoned_checkout_shipping_line
+  shopify_using_discount_code_app:
+    - discount_code_app
+  shopify_using_product_variant_media:
+    - product_variant_media
 
 destination_configurations:
   databricks:
@@ -30,5 +34,6 @@ public_models: [
   "shopify__products",
   "shopify__transactions",
   "shopify__customers",
-  "shopify__order_lines"
+  "shopify__order_lines",
+  "shopify__line_item_enhanced"
 ]
