--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,5 +1,5 @@
 name: 'shopify'
-version: '0.18.0'
+version: '0.19.0'
 config-version: 2
 require-dbt-version: [">=1.3.0", "<2.0.0"]
 models:
@@ -25,21 +25,29 @@ vars:
     shopify_abandoned_checkout: "{{ ref('stg_shopify__abandoned_checkout') }}"
     shopify_collection_product: "{{ ref('stg_shopify__collection_product') }}"
     shopify_collection: "{{ ref('stg_shopify__collection') }}"
-    shopify_customer_tag: "{{ ref('stg_shopify__customer_tag') }}"
-    shopify_discount_code: "{{ ref('stg_shopify__discount_code') }}"
+    shopify_customer_tag: "{{ ref('stg_shopify__customer_tag') }}"    
+    shopify_discount_allocation: "{{ ref('stg_shopify__discount_allocation') }}" 
+    shopify_discount_application: "{{ ref('stg_shopify__discount_application') }}" 
+    shopify_discount_code_app: "{{ ref('stg_shopify__discount_code_app') }}" 
+    shopify_discount_code_basic: "{{ ref('stg_shopify__discount_code_basic') }}" 
+    shopify_discount_code_bxgy: "{{ ref('stg_shopify__discount_code_bxgy') }}" 
+    shopify_discount_code_free_shipping: "{{ ref('stg_shopify__discount_code_free_shipping') }}" 
+    shopify_discount_redeem_code: "{{ ref('stg_shopify__discount_redeem_code') }}"         
     shopify_fulfillment: "{{ ref('stg_shopify__fulfillment') }}"
     shopify_inventory_item: "{{ ref('stg_shopify__inventory_item') }}"
     shopify_inventory_level: "{{ ref('stg_shopify__inventory_level') }}"
     shopify_inventory_quantity: "{{ ref('stg_shopify__inventory_quantity') }}"
     shopify_location: "{{ ref('stg_shopify__location') }}"
+    shopify_media: "{{ ref('stg_shopify__media') }}"
+    shopify_media_image: "{{ ref('stg_shopify__media_image') }}"    
     shopify_metafield: "{{ ref('stg_shopify__metafield') }}"
     shopify_order_note_attribute: "{{ ref('stg_shopify__order_note_attribute') }}"
     shopify_order_shipping_line: "{{ ref('stg_shopify__order_shipping_line') }}"
     shopify_order_shipping_tax_line: "{{ ref('stg_shopify__order_shipping_tax_line') }}"
     shopify_order_tag: "{{ ref('stg_shopify__order_tag') }}"
     shopify_order_url_tag: "{{ ref('stg_shopify__order_url_tag') }}"
-    shopify_price_rule: "{{ ref('stg_shopify__price_rule') }}"
-    shopify_product_image: "{{ ref('stg_shopify__product_image') }}"
+    shopify_product_media: "{{ ref('stg_shopify__product_media') }}"
+    shopify_product_variant_media: "{{ ref('stg_shopify__product_variant_media') }}"
     shopify_product_tag: "{{ ref('stg_shopify__product_tag') }}"
     shopify_shop: "{{ ref('stg_shopify__shop') }}"
     shopify_tax_line: "{{ ref('stg_shopify__tax_line') }}"
