--- a/packages.yml
+++ b/packages.yml
@@ -1,7 +1,3 @@
 packages:
-# - package: fivetran/shopify_source
-#   version: [">=0.17.0", "<0.18.0"]
-
-  - git: https://github.com/fivetran/dbt_shopify_source.git
-    revision: schema-change/add-media-discount-deprecate-product-image-price-rule
-    warn-unpinned: false
+   - package: fivetran/shopify_source
+     version: [">=0.18.0", "<0.19.0"]
