--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,6 +2,11 @@ name: 'shopify'
 version: '0.19.0'
 config-version: 2
 require-dbt-version: [">=1.3.0", "<2.0.0"]
+profile: 'wow_ai_transformation'
+
+on-run-start:
+  - "CREATE SCHEMA IF NOT EXISTS `{{ target.project }}.{{ target.dataset }}_stg_shopify`"
+  - "CREATE SCHEMA IF NOT EXISTS `{{ target.project }}.{{ target.dataset }}_shopify`"
 models:
   shopify:
     +schema: shopify
@@ -56,3 +61,10 @@ vars:
     shopify_order_discount_code: "{{ ref('stg_shopify__order_discount_code') }}"
     shopify_abandoned_checkout_shipping_line: "{{ ref('stg_shopify__abandoned_checkout_shipping_line') }}"
     shopify_fulfillment_event: "{{ ref('stg_shopify__fulfillment_event') }}"
+  shopify_schema: vitrine
+  # Uncomment and set if vitrine dataset is in a different BigQuery project
+  # shopify_database: your_bigquery_project_id
+  
+  # Table identifier overrides for discount tables
+  shopify_discount_code_bxgy_identifier: discount_code_bxgy
+  shopify_discount_code_free_shipping_identifier: discount_code_free_shipping
