--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,6 @@
 packages:
- - package: fivetran/shopify_source
-   version: [">=0.18.0", "<0.19.0"]
+#  - package: fivetran/shopify_source
+#    version: [">=0.18.0", "<0.19.0"]
+  - git: https://github.com/fivetran/dbt_shopify_source.git
+    revision: patch/json-bigquery-compatibility
+    warn-unpinned: false 
