Q2 FY26: Apply automated update.

--- a/integration_tests/dbt_project.yml
+++ b/integration_tests/dbt_project.yml
@@ -359,3 +359,7 @@ seeds:
         media_id: "{%- if target.type == 'bigquery' -%} INT64 {%- else -%} bigint {%- endif -%}"
   +docs:
     show: false
+
+flags:
+  send_anonymous_usage_stats: False
+  use_colors: True
